Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@ body {
     display: flex;
     flex-direction: column;
     max-height: 100vh;
-    overflow: hidden;
 }
 
 #app {
     margin: 10px;
+    margin-right: 3rem;
     border: 2px solid #3d3f3b;
     border-radius: 5px;
     background-color: #2D2E2C;
